Swagger documentation fixes
