# src/routes/users.routes.ts
@@ -1,7 +1,7 @@
 import { Router } from "express";
 import { container } from "tsyringe";
 import { UsersServices } from "../services";
-import { IsEmailAlready, ValidateRequest, VerifyToken } from "../middlewares";
+import { IsEmailAlready, ValidateRequest, VerifyIsSeller, VerifyToken } from "../middlewares";
 import { createUserSchema, userLogin, updateUserSchema } from "../schemas";
 import { UsersControllers } from "../controllers";
 
@@ -19,3 +19,5 @@ userRouter.get("/profile", VerifyToken.execute, (req, res) => userController.get
 userRouter.patch("/update/:id", ValidateRequest.execute({ body: updateUserSchema }), VerifyToken.execute, (req, res) => userController.update (req, res));
 
 userRouter.get("/purchased-courses", VerifyToken.execute, (req, res) => userController.getPurchasedCourses(req, res));
+
+userRouter.get("/my-courses-for-sale", VerifyToken.execute, VerifyIsSeller.execute, (req, res) => userController.getMyCoursesForSale(req, res));
